# macondo-be

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  rag_evaluation.env
resources/: ollama_jemini_pro.json
resources/prompts/: context_based_answer.yml  joke_test.yml
resources/prompts/agent/: not_related_topic_agent.yml  react_agent.yml
resources/prompts/answer/: context_based_answer.yml  financial_role_context_based_answer.yml
resources/prompts/classify/: classify_intent.yml
resources/prompts/evaluation/: answer_relewance.yml  context_relevance.yml  groundedness.yml
resources/prompts/rag/: rephrase_question_for_similarity_search.yml
resources/prompts/rephrase_retrieval_uc/: rephrase_retrieval_uc_answer.yml  rephrase_retrieval_uc_answer_comparator.yml  rephrase_retrieval_uc_compression.yml  rephrase_retrieval_uc_rephrase_question.yml  rephrase_retrieval_uc_synthetic_answer.yml
resources/prompts/route/: company_news_route.yml  company_prise_fall_route.yml  fin_report_route.yml  other_financial_route.yml
resources/prompts/stock_fall_explenation_uc/: stock_fall_explanation_uc_logic.yml  stock_fall_explanation_uc_mark.yml  stock_fall_explanation_uc_question.yml  stock_fall_explanation_uc_review.yml  stock_fall_explanation_uc_role.yml
resources/prompts/summary/: trim_chat_history.yml
resources/q_a_test/: AAPL_qa.json
src/: main.py
src/adapters/: mcp_tools.py
src/db/: db.py  embeddings.py
src/evaluation/: qa_evaluation.py  rag_evaluation.py  route_evaluation.py  test.py  test_util.py
src/llm/: llm_provider.py  ollama_client.py
src/models/: constants.py  mark.py  router.py  summarised_chat_history_memory.py
src/prompt/: prompt_manager.py  prompts.py
src/service/: agent_executor_service.py  chat_runnable.py  file_format_service.py  guardrail_service.py  memory.py  query_report_service.py  resolve_intention_db_service.py  split_service.py
src/service/graph/: fall_explanation_graph.py  intention_service.py  news_search_reflection_summary_graph.py  report_search_reflection_graph.py  router.py  router_graph.py
src/service/mcp/: mcp.py
src/service/react/: react_agent.py
src/tools/: tools.py
src/usecase/: image_uc.py  report_uc.py
src/util/: env_property.py  logger.py  prompt_manager.py
tests/: test_evaluation_metrics.py
(+4 files in other folders)
